--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ Latest commit 8e67b94 on 20 Feb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 
@@ -179,7 +180,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 © 2022 GitHub, Inc.
 Terms
 Privacy
